osprey: Disable hardware visualizer
* This appears to cause serious issues with compress offload.

Change-Id: I6cb8ee2b9e1fbf6915001dc1808ed10f15df5f6e

--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -189,18 +189,18 @@ effects {
     }
   }
   visualizer {
-    library proxy
-    uuid 1d0a1a53-7d5d-48f2-8e71-27fbd10d842c
+#    library proxy
+#    uuid 1d0a1a53-7d5d-48f2-8e71-27fbd10d842c
 
-    libsw {
+#    libsw {
       library visualizer_sw
       uuid  d069d9e0-8329-11df-9168-0002a5d5c51b
-    }
+#    }
 
-    libhw {
-      library visualizer_hw
-      uuid 7a8044a0-1a71-11e3-a184-0002a5d5c51b
-    }
+#    libhw {
+#      library visualizer_hw
+#      uuid 7a8044a0-1a71-11e3-a184-0002a5d5c51b
+#    }
   }
   downmix {
     library downmix
