Call the init.surnia.sh script
Change-Id: I83ecf7d0128d950a09407c48efa08a097ec0d3ae

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -146,6 +146,7 @@ on early-boot
     write /sys/kernel/boot_adsp/boot 1
 
     exec /system/bin/sh /init.mmi.early_boot.sh
+    exec /system/bin/sh /init.surnia.sh
 
 on boot
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
