--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -852,7 +852,7 @@ on property:init.svc.bootanim=running
 
 on property:sys.boot_completed=1
 
-     write /sys/block/mmcblk0/queue/scheduler fiops
+     write /sys/block/mmcblk0/queue/scheduler bfq
 
      write /sys/module/lpm_levels/parameters/sleep_disabled 0
      write /sys/devices/system/cpu/cpu0/online 1
