surnia: Add boringssl wrapper hack
Change-Id: I63a2e4beafdd4e0854613de37941c8087156aac1
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -78,6 +78,9 @@ on init
     chown root diag /sys/kernel/dropbox/event
     chown root diag /sys/kernel/dropbox/data
 
+    # BoringSSL hack
+    export LD_PRELOAD "/system/lib/libboringssl-compat.so"
+
     # Configure coredump
     write /proc/sys/kernel/core_pattern "|/system/bin/coredump %e %p %t"
     write /proc/self/coredump_filter "0x7f"
