--- a/audio/audio_policy.conf
+++ b/audio/audio_policy.conf
@@ -29,12 +29,12 @@ audio_hw_modules {
         devices AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_WIRED_HEADSET|AUDIO_DEVICE_OUT_WIRED_HEADPHONE|AUDIO_DEVICE_OUT_LINE|AUDIO_DEVICE_OUT_ALL_SCO|AUDIO_DEVICE_OUT_FM
         flags AUDIO_OUTPUT_FLAG_PRIMARY
       }
-      deep_buffer {
-         sampling_rates 8000|11025|16000|22050|24000|32000|44100|48000
+      low_latency {
+         sampling_rates 44100|48000
          channel_masks AUDIO_CHANNEL_OUT_STEREO
          formats AUDIO_FORMAT_PCM_16_BIT
          devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_WIRED_HEADSET|AUDIO_DEVICE_OUT_WIRED_HEADPHONE|AUDIO_DEVICE_OUT_LINE|AUDIO_DEVICE_OUT_ALL_SCO|AUDIO_DEVICE_OUT_FM
-         flags AUDIO_OUTPUT_FLAG_DEEP_BUFFER
+         flags AUDIO_OUTPUT_FLAG_FAST
       }
       compress_offload {
         sampling_rates 8000|11025|12000|16000|22050|24000|32000|44100|48000
