--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -59,7 +59,7 @@ on init
     symlink /sdcard /storage/sdcard0
 
     # Symbols required for motorola blobs
-    export LD_PRELOAD /system/lib/libmoto.so
+    export LD_PRELOAD /system/lib/libmoto.so:/system/lib/libboringssl-compat.so
 
     # Configure coredump
     write /proc/sys/kernel/core_pattern "|/system/bin/coredump %e %p %t"
