--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -26,6 +26,10 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
+on init
+    # Symbols required for motorola blobs
+    export LD_SHIM_LIBS /system/lib/hw/camera.msm8916.so|libshim_camera.so:/system/lib/libjustshoot.so|libshim_camera.so:/system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/lib/liblog.so|libshim_log.so:/system/lib/libmdmcutback.so|libshim_mdmcutback.so:/system/bin/rild|libshim_ril.so:/system/lib/libril.so|libshim_ril.so
+
 on property:sys.boot_completed=1
     setprop sys.io.scheduler bfq
 
