--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -28,7 +28,7 @@
 
 on init
     # Symbols required for motorola blobs
-    export LD_SHIM_LIBS /system/lib/hw/camera.msm8916.so|libshim_camera.so:/system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/lib/liblog.so|libshim_log.so:/system/bin/rild|libshim_ril.so:/system/lib/libril.so|libshim_ril.so
+    export LD_SHIM_LIBS /system/lib/hw/camera.msm8916.so|libshim_camera.so:/system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/lib/liblog.so|libshim_log.so
 
 on property:sys.boot_completed=1
     setprop sys.io.scheduler bfq
