--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -40,6 +40,11 @@ on property:sys.boot_completed=1
     # HMP Task packing settings for 8916
     write /proc/sys/kernel/sched_small_task 50
 
+    # Load WLAN driver, to satisfy wificond
+    insmod /system/lib/modules/wlan.ko
+    chown wifi wifi /sys/module/wlan/parameters/fwpath
+    setprop wlan.driver.status "ok"
+
     # disable thermal core_control to update scaling_min_freq
     write /sys/module/msm_thermal/core_control/enabled 0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 400000
